fix: Put user field back in tracker bundle [DHIS2-18001] (#18693)
* fix: Put user field back in tracker bundle [DHIS2-18001]

* Fix code review comments